[project]
name = "ts-distill"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flake8>=7.1.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "keras>=3.7.0",
    "monai>=1.4.0",
    "mypy>=1.14.0",
    "ruff>=0.8.4",
    "setuptools>=75.6.0",
    "surface-distance>=0.1",
    "totalsegmentator>=2.4.0",
]
[tool.ruff]
line-length = 119

[tool.flake8]
max-line-length = 119
